# hrm_ocr

./: .env.example  Makefile  README.md  pyproject.toml
configs/: default.yaml  field_coords.yaml  label_studio_config.xml  logging.yaml
data/reference/: ifsc.db  pincodes.db
docker/: .dockerignore  Dockerfile  docker-compose.yml
logs/: feedback.db  routing_decisions.jsonl
scripts/: augment_dataset.py  deploy.sh  download_fonts.py  download_paddle_models.py  download_reference_data.py  generate_synthetic.py  push_images_to_ls.py  run_eval.py
src/: debug.py
src/hrm_ocr/: __init__.py  eval.py  exceptions.py
src/hrm_ocr/api/: main.py
src/hrm_ocr/api/middleware/: request_id.py
src/hrm_ocr/api/routes/: extract.py
src/hrm_ocr/api/schemas/: __init__.py  response.py
src/hrm_ocr/correction/: __init__.py  patterns.py  substitutions.py
src/hrm_ocr/data/: aadhaar_gen.py  label_studio.py  pan_gen.py
src/hrm_ocr/feedback/: __init__.py  logger.py  pull_corrections.py  push_to_ls.py  retrain_trigger.py
src/hrm_ocr/models/: __init__.py  glyph_cache.py  ocr_engine.py  template_detector.py
src/hrm_ocr/pipeline/: __init__.py  augment.py  ingest.py  pdf_router.py  preprocess.py  text_extractor.py
src/hrm_ocr/validation/: __init__.py  router.py  validators.py
tests/: __init__.py
tests/integration/: test_extract_endpoint.py  test_feedback_loop.py  test_full_pipeline.py
tests/unit/: test_aadhaar_gen.py  test_augment.py  test_correction.py  test_eval.py  test_glyph_cache.py  test_ocr_engine.py  test_pan_gen.py  test_pdf_router.py  test_pipeline.py  test_router.py  test_schemas.py  test_template_detector.py  test_text_extractor.py  test_validators.py
