[tool.poetry]
name = "hrm-ocr-api"
version = "0.1.0"
description = "Production-grade HRM OCR API — lightweight, accurate, simple. Extracts structured fields from Aadhaar and PAN cards via rule-based pipeline and PaddleOCR."
authors = ["HRM OCR Team <dev@hrm-ocr.local>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "hrm_ocr", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"

# OCR & Computer Vision
paddlepaddle = "2.6.1"          # CPU-only build; no GPU, no CUDA deps
paddleocr = "2.7.3"
opencv-python-headless = "4.9.0.80"
Pillow = "10.3.0"
scikit-image = "0.23.2"

# PDF handling
pdfplumber = "0.11.0"
pdf2image = "1.17.0"

# Web framework
fastapi = "0.111.0"
uvicorn = { version = "0.30.1", extras = ["standard"] }
python-multipart = "0.0.9"
slowapi = "0.1.9"
pydantic = ">=2.7,<3.0"

# Utilities
pyyaml = "6.0.1"
aiofiles = "23.2.1"
python-Levenshtein = "0.25.1"
faker = "25.2.0"

# Data / persistence
sqlalchemy = "2.0.30"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
pytest-cov = "^5.0"
httpx = "^0.27"
ruff = "^0.4"
mypy = "^1.10"
pre-commit = "^3.7"
jupyter = "^1.0"
ipykernel = "^6.29"

[tool.poetry.scripts]
hrm-ocr = "hrm_ocr.api.main:app"

# ---------------------------------------------------------------------------
# Tool configuration
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "UP", "ANN", "S", "B", "A", "C4", "PT", "SIM", "TCH"]
ignore = ["ANN101", "ANN102", "S101", "ANN401"]

[tool.ruff.per-file-ignores]
"tests/**" = ["S", "ANN", "N806"]
"scripts/**" = ["ANN", "S603", "S607"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src/hrm_ocr --cov-report=term-missing --cov-report=html:.coverage_html -v"

[tool.coverage.run]
source = ["src/hrm_ocr"]
omit = ["*/__init__.py", "*/data/*"]

[build-system]
requires = ["poetry-core>=1.8"]
build-backend = "poetry.core.masonry.api"
